# NukeDockerBuild

./: .dockerignore  .gitignore  LICENSE  README.md  build.ps1  build.sh  build_all.sh  create_dockerfiles.py  pyproject.toml  requirements.txt  update_table.py
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/workflows/: build.yaml  build_linux.yaml  build_mac.yaml  build_windows.yaml  create_dockerfiles.yaml
.woodpecker/: create_dockerfiles.yaml  test.yaml
dependancies/macos/: toolchain.cmake
dependencies/: build.zig
dependencies/macos/: toolchain.cmake
dockerfile_creator/creator/: collector.py  create_dockerfiles.py
dockerfile_creator/datamodel/: commands.py  constants.py  docker_data.py
dockerfiles/10.0/linux/: Dockerfile
dockerfiles/10.0/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/10.5/linux/: Dockerfile
dockerfiles/10.5/linux/cmake/: Murmur3Config.cmake  NukeConfigVersion.cmake
dockerfiles/11.0/linux/: Dockerfile
dockerfiles/11.0/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/11.0/linux/tests/: CMakeLists.txt
dockerfiles/11.1/linux/: Dockerfile
dockerfiles/11.1/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/11.2/linux/: Dockerfile
dockerfiles/11.2/linux/cmake/: NukeConfig.cmake  NukeConfigVersion.cmake
dockerfiles/11.3/linux/: Dockerfile
dockerfiles/11.3/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/12.0/linux/: Dockerfile
dockerfiles/12.0/windows/: Dockerfile
dockerfiles/12.0/windows/cmake/: NukeConfig.cmake  NukeConfigVersion.cmake
dockerfiles/12.1/linux/: Dockerfile
dockerfiles/12.1/linux/cmake/: NukeConfig.cmake
dockerfiles/12.1/windows/: Dockerfile
dockerfiles/12.1/windows/cmake/: Murmur3Config.cmake  NukeConfigVersion.cmake
dockerfiles/12.2/linux/: Dockerfile
dockerfiles/12.2/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/12.2/linux/tests/: CMakeLists.txt
dockerfiles/12.2/windows/: Dockerfile
dockerfiles/13.0/linux/: Dockerfile
dockerfiles/13.0/macos/: Dockerfile
dockerfiles/13.0/macos/cmake/: NukeConfig.cmake  NukeConfigVersion.cmake
dockerfiles/13.0/windows/: Dockerfile
dockerfiles/13.1/linux/: Dockerfile
dockerfiles/13.1/linux/cmake/: NukeConfigVersion.cmake
dockerfiles/13.1/macos/: Dockerfile
dockerfiles/13.1/macos/cmake/: Murmur3Config.cmake
dockerfiles/13.1/windows/: Dockerfile
dockerfiles/13.1/windows/cmake/: NukeConfigVersion.cmake
dockerfiles/13.2/linux/: Dockerfile
dockerfiles/13.2/macos/: Dockerfile
dockerfiles/13.2/windows/: Dockerfile
dockerfiles/14.0/linux/: Dockerfile
dockerfiles/14.0/macos/: Dockerfile
dockerfiles/14.0/windows/: Dockerfile
dockerfiles/14.1/linux/: Dockerfile
dockerfiles/14.1/macos/: Dockerfile
dockerfiles/14.1/windows/: Dockerfile
dockerfiles/15.0/linux/: Dockerfile
dockerfiles/15.0/macos/: Dockerfile
dockerfiles/15.0/macos-arm/: Dockerfile
dockerfiles/15.0/windows/: Dockerfile
dockerfiles/15.1/linux/: Dockerfile
dockerfiles/15.1/macos/: Dockerfile
dockerfiles/15.1/macos-arm/: Dockerfile
dockerfiles/15.1/windows/: Dockerfile
dockerfiles/15.2/linux/: Dockerfile
dockerfiles/15.2/windows/: Dockerfile
dockerfiles/16.0/linux/: Dockerfile
dockerfiles/16.0/windows/: Dockerfile
dockerfiles/linux/: Dockerfile
scripts/: build.sh  get_nuke_linux.sh  get_nuke_windows.sh  nuke_source_from_dockerfile.bash  nuke_source_from_dockerfile.ps1  nuke_source_from_dockerfile_linux.bash  nuke_source_from_dockerfile_linux.sh  nuke_source_from_dockerfile_macos.bash  patch.sh
src/nukedockerbuild/: main.py
src/nukedockerbuild/creator/: collector.py  create_dockerfiles.py
src/nukedockerbuild/datamodel/: commands.py  constants.py  docker_data.py
table_retriever/datamodel/: __init__.py  constants.py  table_data.py
table_retriever/worker/: converter.py  data_collector.py  data_extractor.py  exporter.py  retriever.py
tests/dockerfile_creator/creator/: test_collector.py  test_create_dockerfiles.py
tests/dockerfile_creator/datamodel/: test_commands.py  test_constants.py  test_docker_data.py
tests/example_project/: CMakeLists.txt
tests/example_project/src/: TestPlugin.cpp
tests/table_retriever/: test_retriever.py
tests/table_retriever/worker/: test_converter.py  test_data_collector.py  test_data_extractor.py  test_exporter.py  test_retriever.py
toolchains/windows/: toolchain.cmake
