[project]
name = "nukedockerbuild"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gilles Vink", email = "noreply@github.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[project.scripts]
dockerbuild = "nukedockerbuild.main:generate_dockerfiles"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nukedockerbuild"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "--capture=tee-sys"
pythonpath = [
    "src"
]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "EM",
    "ERA",
    "F",
    "FA",
    "FIX",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TCH",
    "TD",
    "TID",
    "UP",
    "W",
    "YTT",
]
show-fixes = true
target-version = "py311"
