[project]
name = "nukedockerbuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "requests>=2.32.3",
]

[tool.uv]
package=true

[project.scripts]
nuke-dockerbuild = "nukedockerbuild.main:main"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "--capture=tee-sys"
pythonpath = [
    "src"
]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "EM",
    "ERA",
    "F",
    "FA",
    "FIX",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TCH",
    "TD",
    "TID",
    "UP",
    "W",
    "YTT",
]
show-fixes = true
target-version = "py313"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
